# aatm

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  aatm_search_ui.py  benchmark_async_translation_requests.py  data-exploration.ipynb  data-preparation.ipynb  dvc.yaml  index.html  llm_training_baseline.ipynb  mapping_task.yaml  mkdocs.yml  objects.inv  prepare_database.py  prepare_datasets.py  prepare_vector_database.py  prepare_vector_database_gemma_embedding.py  prepare_vector_database_qwen3.py  pyproject.toml  repair_vector_database.py  repair_vector_database_metadata.py  setup_vector_database.ipynb  split_datasets.py  sql_commands.yaml  test.ipynb  tokenize_datasets.py  train.py  vocabularies.dvc
.dvc/: config
.github/workflows/: tests.yml
aatm/: __init__.py  data_models.py  debug.py  embedding_functions.py  extractors.py  local_database_utils.py  logs.py  main.py  pipeline.py  prompt_helpers.py  rerankers.py  retrievers.py  search_ui.py  selectors.py  sql_commands.yaml  terminology_mapper.py  time.py  timing_profiler.py  translators.py
aatm/aio/: selectors.py  translators.py
aatm/api/: config.py  data_models.py  main.py
aatm/omop/: __init__.py  condition_occurrence.py  device_exposure.py  drug_exposure.py  registry.py
aatm/registries/: rerankers.py  retrievers.py  selectors.py  translators.py
docs/: index.md
docs/getting-started/: artifacts.md  concepts.md  env.md  index.md  installation.md  quick_start_cli.md  quick_start_python_api.md
docs/reference/: cli.md  data_models.md  debug.md  embedding_functions.md  extractors.md  index.md  local_database_utils.md  logs.md  pipeline.md  prompt_helpers.md  rerankers.md  retrievers.md  search_ui.md  selectors.md  terminology_mapper.md  translators.md
dvclive/: params.yaml
examples/: example_condition_occurrence_extractor.ipynb  example_drug_exposure_extractor.ipynb
experiments/LLM-JEPA/: 001.yaml
experiments/llama-32-1b-jepa/: params.yaml
getting-started/: index.html
getting-started/artifacts/: index.html
getting-started/concepts/: index.html
getting-started/env/: index.html
getting-started/installation/: index.html
getting-started/quick_start_cli/: index.html
getting-started/quick_start_python_api/: index.html
notebooks/: data-exploration.ipynb  embedding_models.ipynb  eval.ipynb  preprocess_tuss_tables.ipynb  reranker.ipynb  retriever.ipynb  setup_vector_database.ipynb  terminology_mapper.ipynb  terminology_mapper_with_llm_selector.ipynb  terminology_mapper_with_reranker.ipynb  test_llm_selector.ipynb  translate_gemini.ipynb
notebooks copy/: test_terminology_mapper.ipynb  venn.ipynb
output/: mapped_source_concepts.csv
output/embeddinggemma-300M/: mapped_source_concepts.csv  output_vs_ref.csv
output/gemini-embedding-001/: mapped_source_concepts.csv  output_vs_ref.csv
output/qwen3-06B/: mapped_source_concepts.csv  output_vs_ref.csv
output/qwen3-4B/: mapped_source_concepts.csv  output_vs_ref.csv
output/text-embedding-3-large/: mapped_source_concepts.csv  output_vs_ref.csv
output/text-embedding-3-small/: mapped_source_concepts.csv  output_vs_ref.csv
output/tuss_procedures/: mapped_source_concepts.csv
reference/cli/: index.html
reference/data_models/: index.html
reference/debug/: index.html
reference/embedding_functions/: index.html
reference/local_database_utils/: index.html
reference/logs/: index.html
scripts/: precommit.sh
search/: search_index.json
tests/: test_prompt_helpers.py
(+128 files in other folders)
