[project]
name = "precision-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "datasets>=2.14.4",
    "dvc[gs]>=3.64.2",
    "dvclive>=3.49.0",
    "gdown>=5.2.0",
    "google-genai[aiohttp]>=1.60.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.8",
    "jsonlines>=4.0.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.1",
    "peft>=0.18.0",
    "pyyaml>=6.0.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.66.5",
    "transformers>=4.57.3",
]
