[project]
name = "precision-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "datasets>=2.14.4",
    "dvc[gs]>=3.64.2",
    "dvclive>=3.49.0",
    "gdown>=5.2.0",
    "google-genai[aiohttp]>=1.60.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.8",
    "jsonlines>=4.0.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.1",
    "peft>=0.18.0",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.66.5",
    "transformers>=4.57.3",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
